--- a/gb/20/2/23/n11890189.md
+++ b/gb/20/2/23/n11890189.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hvrsuf251/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/hvrsuf251/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hvrsuf251/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：时辰一到 江泽民等必遭恶报</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2019-7-18-washington-dc-falun-gong-parade_10-1-600x400.jpg" />
 <h6>每年“七﹒二零”前后，全球各地的法轮功学员会举办大型集会、游行、烛光夜悼等活动，呼吁各界正义力量共同制止中共迫害法轮功。图为2019年7月18日，法轮功学员于华盛顿DC举办反迫害20周年游行。（戴兵／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年02月24日讯】今年是中共<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E6%B3%95%E8%BD%AE%E5%8A%9F.md">迫害法轮功</a>21年。这是血雨腥风的21年，这是谎言满天飞的21年，这是中共邪恶登峰造极的21年，这是天怒人怨、人神共愤的21年，这是中共走向最后灭亡的21年。</p>
+<p>【大纪元2020年02月24日讯】今年是中共<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">迫害法轮功</a>21年。这是血雨腥风的21年，这是谎言满天飞的21年，这是中共邪恶登峰造极的21年，这是天怒人怨、人神共愤的21年，这是中共走向最后灭亡的21年。</p>
 <p>21年来，以前中共独裁者江泽民为首的中共黑恶流氓集团，对全中国法轮功学员，对全世界法轮功学员，对14亿炎黄子孙，对70亿地球人，犯下了滔天大罪。</p>
 <h2>江泽民、曾庆红等罪大无边</h2>
-<p>这个犯罪集团中最恶的代表人物有：中共<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E6%B3%95%E8%BD%AE%E5%8A%9F.md">迫害法轮功</a>的核心决策人江泽民，原中共政治局常委、国家副主席曾庆红，原中共政治局常委、国务院副总理李岚清，4任中央政法委书记罗干、周永康、孟建柱、郭声琨，原中共政治局委员、重庆市委书记薄熙来，现任最高法院院长周强等。</p>
-<p>从2015年5月起，全世界近21万名法轮功学员实名向北京最高法院、最高检察院<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A%E6%B1%9F%E6%B3%BD%E6%B0%91.md">控告江泽民</a>。从2015年7月起，全世界有350万人联署向最高法院、最高检察院举报江泽民。这是人类历史上从未有过的伟大壮举。</p>
+<p>这个犯罪集团中最恶的代表人物有：中共<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%BF%AB%E5%AE%B3%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">迫害法轮功</a>的核心决策人江泽民，原中共政治局常委、国家副主席曾庆红，原中共政治局常委、国务院副总理李岚清，4任中央政法委书记罗干、周永康、孟建柱、郭声琨，原中共政治局委员、重庆市委书记薄熙来，现任最高法院院长周强等。</p>
+<p>从2015年5月起，全世界近21万名法轮功学员实名向北京最高法院、最高检察院<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%8E%A7%E5%91%8A%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">控告江泽民</a>。从2015年7月起，全世界有350万人联署向最高法院、最高检察院举报江泽民。这是人类历史上从未有过的伟大壮举。</p>
 <p>江泽民等涉嫌违犯国际法和中国加入的国际条约的规定，已构成群体灭绝罪、酷刑罪、反人类罪；违犯“宪法”规定的侵犯公民信仰自由等，违犯“刑法”规定的故意杀人罪、故意伤害罪、绑架罪、诽谤罪、刑讯逼供罪、滥用职权罪、徇私枉法罪等。</p>
-<p>其中，大规模活摘法轮功学员器官，被认为是“这个星球上前所未有的邪恶”。去年6月17日，英国伦敦“<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md">独立人民法庭</a>”做出判决：中共反人类罪成立，其活摘良心犯器官已大规模存在多年，并仍在进行，法轮功学员是器官供应的最主要来源。50多位证人向法庭提供证词，包括加拿大人权律师大卫.麦塔斯、“追查迫害法轮功国际组织”主席汪志远等。</p>
+<p>其中，大规模活摘法轮功学员器官，被认为是“这个星球上前所未有的邪恶”。去年6月17日，英国伦敦“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E4%BA%BA%E6%B0%91%E6%B3%95%E5%BA%AD.md#1">独立人民法庭</a>”做出判决：中共反人类罪成立，其活摘良心犯器官已大规模存在多年，并仍在进行，法轮功学员是器官供应的最主要来源。50多位证人向法庭提供证词，包括加拿大人权律师大卫.麦塔斯、“追查迫害法轮功国际组织”主席汪志远等。</p>
 <p>中共对法轮功的迫害，是一场持续21年、超越一切道德和法律底线的“超限战”。2019年，这场“超限战”被搬到香港；2020年，随着武汉新冠肺炎疫情的蔓延，这场“超限战”在武汉、在湖北省、在中国其他省区市再次打响。这种持续几十年无底线的作恶，导致中国大陆道德败坏、法纪废驰、腐败丛生、人心魔变。</p>
-<h2><a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92.md">新冠病毒</a>正逼近中南海</h2>
+<h2><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%B0%E5%86%A0%E7%97%85%E6%AF%92.md#1">新冠病毒</a>正逼近中南海</h2>
 <p>17年前的2003年，曾经爆发了一场遍及全国的SARS疫情。17年后的今天，由于中共一直持续不断迫害法轮功，并将对法轮功的迫害扩展到其他社会群体，根本没有花心思做好烈性传染病爆发的准备，导致武汉新冠肺炎大爆发。这场比SARS更猛烈的疫情，实际上是中共人为制造的又一场大瘟疫。</p>
 <p>2月20日，首都医科大学附属复兴医院院长李东霞通报说，复兴医院累计确诊病例34宗，另有本区检测阳性2宗。复兴医院有中共高干病房，负责45家单位的局级、部级官员，约5000多人的医疗保健工作。这里距离中南海，仅3500米。</p>
 <p>2月20日，主持1978年重建武汉黄鹤楼的总设计师、已经80高龄的向欣然先生在一篇文章中写道：“其实，我对死亡并无太多恐惧，我已经活过了中国人的平均年龄，正常死亡是迟早的事。但是如果因染疫而死，那无异于‘他杀’，我是于心不甘的！我已经有一个月没有下楼了，我常常站在5楼的阳台上，望着周围死一般寂静的世界发呆。”</p>
@@ -36,52 +36,45 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/23/n11890189.htm">王友群：时辰一到 江泽民等必遭恶报</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884463.htm">北京多家医院爆发新冠肺炎群聚感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879930.htm">专家：中共已是烂摊子 全球将迎来新的中国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884649.htm">中共多家监狱爆发大规模新冠肺炎疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884866.htm">武汉民间志愿者：新冠肺炎重症死亡率达50%</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883588.htm">让春意进入家中 春季餐桌装饰要点</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882591.htm">白色“充气城堡”中的另类婚礼 用跳的结婚</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884842.htm">美国密西根湖的冰火山喷发 蔚为奇观</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882704.htm">超美多肉植物“山地玫瑰”花语：永恒的爱和美</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882847.htm">鸟也住大楼？南非大鸟巢有100房间500只鸟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11866471.htm">【三国英雄13】官渡之战曹操获胜的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/22/n11888225.md#1">王易：给习近平的火急公开信</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/22/n11887894.md#1">【十字路口】病毒攻进中南海？中共或瞒新疫情</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/20/n11883678.md#1">中共基层官员的厄运 曾迫害法轮功</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/20/n11884112.md#1">任世豪：瘟疫非天灾 造假酿大祸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/11/n11860941.md#1">新年期间 651名法轮功学员遭绑架骚扰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/11/8/n11642570.md#1">王友群：江泽民坏事做绝 法轮功巍然屹立</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/7/24/n11405219.md#1">王友群：审判江泽民的大幕已经拉开</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hvrsuf251/djy/blob/master/gb/20/2/23/n11890189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hvrsuf251/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hvrsuf251/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hvrsuf251/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/16/n9847533.md#1" target="_blank">共产主义受难者纪念碑与去共化浪潮</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940988.md#1">【最新疫情3.15】美确诊3244例 美联储再降息</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940920.md#1">荷兰科学家首发现武汉病毒抗体 药物快过疫苗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940024.md#1">“郑州毒王”隐瞒旅游史 恐影响全球近4万人</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939304.md#1">武汉失踪青年达数百人 警方不作为（上）</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940229.md#1">【直播回放】3.14新肺炎追踪：美进入紧急状态</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940830.md#1">【一线采访视频版】：医院人满为患 求医无门</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938946.md#1">【一线采访视频版】武汉居民困家中 面临断粮</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938952.md#1">疫情下范冰冰晒自拍 出门戴双层口罩引围观</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938685.md#1">梁朝伟赴澳洲拍漫威片《上气》剧组全面停工</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/23/n11890189.htm">王友群：时辰一到 江泽民等必遭恶报</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/23/n11890189.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
